# rapid-plugin-template-rust

./: Cargo.toml  Dockerfile  LICENSE.md  README.md
.github/workflows/: deploy-plugin.yml  test.yml
src/: main.rs
