[package]
name = "my-plugin"
version = "0.1.0"
edition = "2021"

[dependencies]
rapid-utils = "0.1.7"
prost = "0.12.4"
tonic = "0.11.0"
tokio-util = "0.7.11"
futures-util = "0.3.30"
tokio = { version = "^1.0", features = ["macros", "rt-multi-thread", "fs"] }
tokio-stream = { version = "0.1.15", features = ["full"] }
log = "0.4.21"
simple_logger = "5.0.0"
bytes = "1.6.0"
lazy_static = "1.4.0"
thiserror = "1.0.59"
rs-snowflake = "0.6.0"
http = "1.1.0"

[build-dependencies]
tonic-build = { version = "0.11.0", features = ["prost"] }
reqwest = { version = "0.12.4", features = ["blocking"] }
